--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
     "private": true,
     "type": "module",
     "dependencies": {
-        "@apollo/client": "^3.12.0",
+        "@apollo/client": "^3.12.2",
         "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/react-toggle-group": "^1.1.0",
         "@radix-ui/themes": "^3.1.6",
         "dayjs": "^1.11.13",
         "firebase": "^11.0.2",
         "graphql": "^16.9.0",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
+        "jotai": "^2.10.3",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "react-firebaseui": "^6.0.0",
         "react-router": "^7.0.2",
         "react-router-dom": "^7.0.2",
         "react-snowfall": "^2.2.0",
         "react-spring": "^9.7.4",
         "recharts": "^2.14.1",
-        "recoil": "^0.7.7",
         "styled-components": "^6.1.13",
         "swiper": "^11.1.15",
         "uuid": "^11.0.3"
@@ -40,14 +40,14 @@
         "@babel/preset-env": "^7.26.0",
         "@babel/preset-react": "^7.26.3",
         "@babel/preset-typescript": "^7.26.0",
-        "@testing-library/react": "^16.0.1",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/react": "^16.1.0",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.10.1",
-        "@types/react": "^18.3.13",
-        "@types/react-dom": "^18.3.1",
+        "@types/react": "^19.0.1",
+        "@types/react-dom": "^19.0.1",
         "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.3.3",
-        "@types/react-test-renderer": "^18.3.0",
         "@types/styled-components": "^5.1.34",
         "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^8.17.0",
@@ -58,15 +58,16 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-react": "^7.37.2",
-        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "prettier": "^3.4.2",
-        "react-test-renderer": "^18.3.1",
+        "react-test-renderer": "^19.0.0",
         "release-it": "^17.10.0",
         "sass": "^1.82.0",
         "typescript": "^5.7.2",
         "vercel": "^39.1.3",
-        "vite": "^6.0.2",
+        "vite": "^6.0.3",
         "vite-plugin-pwa": "^0.21.1",
         "vite-plugin-svgr": "^4.3.0"
     },
