--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
         "@radix-ui/themes": "^3.2.1",
         "dayjs": "^1.11.13",
         "firebase": "^11.8.1",
-        "framer-motion": "^12.12.2",
+        "framer-motion": "^12.16.0",
         "graphql": "^16.11.0",
-        "jotai": "^2.12.4",
+        "jotai": "^2.12.5",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-firebaseui": "^6.0.0",
-        "react-router": "^7.6.0",
-        "react-router-dom": "^7.6.0",
+        "react-router": "^7.6.2",
+        "react-router-dom": "^7.6.2",
         "react-snowfall": "^2.2.0",
         "react-spring": "^10.0.1",
         "recharts": "^2.15.3",
@@ -44,30 +44,30 @@
         "@testing-library/dom": "^10.4.0",
         "@testing-library/react": "^16.3.0",
         "@types/jest": "^29.5.14",
-        "@types/node": "^22.15.21",
-        "@types/react": "^19.1.5",
-        "@types/react-dom": "^19.1.5",
+        "@types/node": "^22.15.29",
+        "@types/react": "^19.1.6",
+        "@types/react-dom": "^19.1.6",
         "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.3.3",
         "@types/styled-components": "^5.1.34",
         "@types/uuid": "^10.0.0",
-        "@typescript-eslint/eslint-plugin": "^8.32.1",
-        "@typescript-eslint/parser": "^8.32.1",
-        "@vitejs/plugin-react": "^4.5.0",
-        "babel-jest": "^29.7.0",
-        "eslint": "^9.27.0",
+        "@typescript-eslint/eslint-plugin": "^8.33.1",
+        "@typescript-eslint/parser": "^8.33.1",
+        "@vitejs/plugin-react": "^4.5.1",
+        "babel-jest": "30.0.0-beta.3",
+        "eslint": "^9.28.0",
         "eslint-config-prettier": "^10.1.5",
-        "eslint-plugin-prettier": "^5.4.0",
+        "eslint-plugin-prettier": "^5.4.1",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^5.2.0",
         "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
+        "jest-environment-jsdom": "30.0.0-beta.3",
         "prettier": "^3.5.3",
         "react-test-renderer": "^19.1.0",
-        "release-it": "^19.0.2",
-        "sass": "^1.89.0",
+        "release-it": "^19.0.3",
+        "sass": "^1.89.1",
         "typescript": "^5.8.3",
-        "vercel": "^42.1.1",
+        "vercel": "^42.3.0",
         "vite": "^6.3.5",
         "vite-plugin-pwa": "^1.0.0",
         "vite-plugin-svgr": "^4.3.0"
