--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@babel/preset-env": "^7.27.2",
         "@babel/preset-react": "^7.27.1",
         "@babel/preset-typescript": "^7.27.1",
+        "@eslint/compat": "^1.3.1",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/react": "^16.3.0",
         "@types/jest": "^30.0.0",
@@ -55,11 +56,12 @@
         "@typescript-eslint/parser": "^8.35.0",
         "@vitejs/plugin-react": "^4.6.0",
         "babel-jest": "^30.0.2",
-        "eslint": "^9.30.0",
-        "eslint-config-prettier": "^10.1.5",
-        "eslint-plugin-prettier": "^5.5.1",
+        "eslint": "^9.31.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.3",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^5.2.0",
+        "globals": "^16.3.0",
         "jest": "^30.0.3",
         "jest-environment-jsdom": "^30.0.2",
         "prettier": "^3.6.2",
@@ -69,7 +71,7 @@
         "typescript": "^5.8.3",
         "vercel": "^44.2.7",
         "vite": "^7.0.0",
-        "vite-plugin-pwa": "^1.0.0",
+        "vite-plugin-pwa": "^1.0.1",
         "vite-plugin-svgr": "^4.3.0"
     },
     "browserslist": {
@@ -81,6 +83,5 @@
         "development": [
             "last 1 version"
         ]
-    },
-    "packageManager": "yarn@4.7.0"
+    }
 }
