--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "type": "module",
     "dependencies": {
-        "@apollo/client": "^4.0.3",
+        "@apollo/client": "^4.0.5",
         "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/react-toggle-group": "^1.1.11",
         "@radix-ui/themes": "^3.2.1",
@@ -83,5 +83,8 @@
         "development": [
             "last 1 version"
         ]
+    },
+    "engines": {
+        "node": ">=22.0.0"
     }
 }
