--- a/package.json
+++ b/package.json
@@ -35,13 +35,15 @@
         "lint": "eslint ./src/",
         "lint:fix": "eslint ./src/ --fix",
         "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,scss}'",
-        "vercel": "vercel"
+        "vercel": "vercel",
+        "gen-gql-model": "graphql-codegen"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.28.3",
         "@babel/preset-react": "^7.27.1",
         "@babel/preset-typescript": "^7.27.1",
         "@eslint/compat": "^1.3.2",
+        "@graphql-codegen/cli": "^6.0.0",
         "@testing-library/dom": "^10.4.1",
         "@testing-library/react": "^16.3.0",
         "@types/jest": "^30.0.0",
