--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "type": "module",
     "dependencies": {
         "@apollo/client": "^4.0.9",
+        "@linaria/core": "^6.3.0",
+        "@linaria/react": "^6.3.0",
         "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/react-toggle-group": "^1.1.11",
         "@radix-ui/themes": "^3.2.1",
+        "@wyw-in-js/babel-preset": "^0.8.1",
         "dayjs": "^1.11.19",
         "firebase": "^12.6.0",
         "framer-motion": "^12.23.24",
@@ -21,7 +24,6 @@
         "react-snowfall": "^2.3.0",
         "react-spring": "^10.0.3",
         "recharts": "^2.5.14",
-        "styled-components": "^6.1.19",
         "swiper": "^12.0.3",
         "uuid": "^13.0.0"
     },
